--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,11 @@
 # E.g. your domain name
-modowner=com.mycompany
+modowner=com.gfrison
 
 # Your module name
-modname=my-module
+modname=easyweb
 
 # Your module version
-version=1.0.0-final
-
-# The test timeout in seconds
-testtimeout=300
+version=0.1.0
 
 # Set to true if you want module dependencies to be pulled in and nested inside the module itself
 pullInDeps=true
