--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
 def configurePom(def pom) {
     pom.project {
         name rootProject.name
-        description 'Description of your module here'
+        description 'facilities for Groovy web developers'
         inceptionYear '2014'
         packaging 'jar'
 
@@ -43,13 +43,13 @@ def configurePom(def pom) {
         }
 
         scm {
-            url 'url to your repo - e.g. github repo url'
+            url 'https://github.com/gfrison/vertx-easyweb/'
         }
 
         licenses {
             license {
-                name 'The name of the license used, e.g.: The Apache Software License, Version 2.0'
-                url 'URl to the license, e.g.: http://www.apache.org/licenses/LICENSE-2.0.txt'
+                name 'The Apache Software License, Version 2.0'
+                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                 distribution 'repo'
             }
         }
